--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button id="startBtn">Start Game</button>
 
   </div>
+ 
 
   <div id="gameWrapper" class="hidden">
     <div id="player"></div>
@@ -24,6 +25,15 @@
     <h1 class="game-over-title">Game Over</h1>
     <button id="restartBtn">Restart</button>
   </div>
+
+   <audio id='sound' preload="auto" loop>
+    <source src='css/sounds/background_sound.mp3' type="audio/mp3">
+  </audio>
+  
+  <audio id='jumpSound' preload="auto">
+    <source src='css/sounds/jump_sound.mp3' type="audio/mp3">
+  </audio>
+
 
   <script src="js/main.js" defer></script>
 </body>
